[cleanup][broker] Add Maven Modernizer plugin in pulsar-broker